feat: update retro 2024

--- a/src/content/blog/the-2024-retrospective.mdx
+++ b/src/content/blog/the-2024-retrospective.mdx
@@ -8,6 +8,8 @@ duration: 7 Minutes
 likes: 0
 ---
 
+import BlogLinkText from "@components/blog/BlogLinkText";
+
 ## 2024 For Me
 
 It's hard to believe that 2024 has already come to an end. This year was filled with valuable lessons and personal growth in various aspects of life. You might wonder, "With all the wonderful memories and enjoyable moments from 2024, why focus on learning?" Well, I've realized that life is a never-ending journey, and this year taught me invaluable lessons that I will carry with me forever. So, what are the lessons that I often refer to? Let me break down what I learned in this year, or should I say the "Subject" that I learned from 2024. Here it is!
@@ -41,4 +43,120 @@ I can confidently say that my college life was well spent. Things like traveling
   </div>
 </div>
 
-I'm a competitive person, and there's no doubt about it. Whether it's striving for academic achievements or playing small games like hide and seek, winning always satisfies me. However, this year has been particularly challenging for me, and it left me feeling stunned for a while. I've realized that my competitiveness isn’t going to take me anywhere further in life; instead, it feels more like envy of other people's achievements. This year, I recognize that my drive isn't just about being competitive—it's rooted in feelings of envy.
+I'm a competitive person, and there's no doubt about it. Whether it's striving for academic achievements or playing small games like hide and seek, winning always satisfies 
+me. However, this year has been particularly challenging for me, and it left me feeling stunned for a while. 
+I've realized that my competitiveness isn’t going to take me anywhere further in life; instead, it feels more like envy of other people's achievements. 
+By the end of 2024, I realized that, being competitive isn't about be better than others. It's about be better than yesterday, just focusing on myself and not take everything
+that i already have for granted. Enjoy every small things. Every pain in our progress, every laughter we had with relatives, every joy for our achievements, and every moments that we share we others,
+that makes us who we are today. So here some pictures of my well-spent moment in 2024.
+
+<div className="grid grid-cols-3 items-start gap-4 !my-10">
+  <div className="!mb-0 flex flex-col space-y-4">
+    <img
+      src="https://res.cloudinary.com/rafirfansyah/image/upload/v1736750882/IMG_5664_udusx7.png"
+      alt="Picture myself"
+      className="h-[152px] sm:h-[309px] md:h-[288px] 2xl:h-auto max-h-[375px] w-full object-cover rounded-lg"
+    />
+  </div>
+  <div className="!mb-0 flex flex-col space-y-4">
+    <img
+      src="https://res.cloudinary.com/rafirfansyah/image/upload/v1736749907/20240721_140147_pbqmnh.jpg"
+      alt="Picture myself in college"
+      className="h-[152px] sm:h-[309px] md:h-[288px] 2xl:h-auto max-h-[375px] w-full object-cover rounded-lg"
+    />
+  </div>
+  <div className="!mb-0 flex flex-col space-y-4">
+    <img
+      src="https://res.cloudinary.com/rafirfansyah/image/upload/v1736749907/IMG-20240505-WA0023_peiy6h.jpg"
+      alt="Picture myself in college"
+      className="h-[152px] sm:h-[309px] md:h-[288px] 2xl:h-auto max-h-[375px] w-full object-cover rounded-lg"
+    />
+  </div>
+  <div className="!mb-0 flex flex-col space-y-4">
+    <img
+      src="https://res.cloudinary.com/rafirfansyah/image/upload/v1736749907/IMG-20240723-WA0085_om1vpq.jpg"
+      alt="Picture myself in college"
+      className="h-[152px] sm:h-[309px] md:h-[288px] 2xl:h-auto max-h-[375px] w-full object-cover rounded-lg"
+    />
+  </div>
+  <div className="!mb-0 flex flex-col space-y-4">
+    <img
+      src="https://res.cloudinary.com/rafirfansyah/image/upload/v1736751162/20240829_100400_mu8iet.jpg"
+      alt="Picture myself in college"
+      className="h-[152px] sm:h-[309px] md:h-[288px] 2xl:h-auto max-h-[375px] w-full object-cover rounded-lg"
+    />
+  </div>
+  <div className="!mb-0 flex flex-col space-y-4">
+    <img
+      src="https://res.cloudinary.com/rafirfansyah/image/upload/v1736751214/20240804_081223_yxb4jm.jpg"
+      alt="Picture myself in college"
+      className="h-[152px] sm:h-[309px] md:h-[288px] 2xl:h-auto max-h-[375px] w-full object-cover rounded-lg"
+    />
+  </div>
+</div>
+
+
+
+#### The Big Theatrics
+
+Back in the day, i used to watch Yung Filly and Chunkz, british youtuber, and once they said a word that stick with me for good. Yes, "The Big Theatrics", this word can
+mean so much. But for me, it's word that can keep me feel grateful and always look for a bigger picture in life. In 2024, I have feel like a failure so many times. It is 
+because I always look up at my friend's achievements, and they had bigger achievements and bigger things to be proud of. I keep telling myself that im a failure. After I graduate,
+I couldnt land my first full time job by the end of 2024, and i feel like a failure again. But this word reminds me, that some day in life, we have to stop to look for our small failure,
+but look for the bigger picture of what we have achieved and how much we grow to be better from yesterday.
+
+<div className="grid grid-cols-2 items-start gap-4 !my-10">
+  <div className="!mb-0 flex flex-col space-y-4">
+    <img
+      src="https://res.cloudinary.com/rafirfansyah/image/upload/v1736755014/f88cf16d-33dd-47c1-a05c-dd1ca043ef6c.png"
+      alt="Picture myself in college"
+      className="w-[600px] max-w-full h-auto rounded-lg"
+    />
+    <img 
+      src="https://res.cloudinary.com/rafirfansyah/image/upload/v1736755277/73b81e6b-cc91-44f9-9d77-bbb59cc38c3d.png"
+      alt="Kalma Picture"
+      className="w-[600px] max-w-full h-auto rounded-lg"
+    />
+  </div>
+  <div className="!mb-0 flex flex-col h-full space-y-4">
+    <img
+      src="https://res.cloudinary.com/rafirfansyah/image/upload/v1736755098/WhatsApp_Image_2024-07-04_at_10.41.03_AM_hw4sbz.jpg"
+      alt="Picture myself in college"
+      className="w-[600px] max-w-full h-full rounded-lg"
+    />
+  </div>
+</div>
+
+Here is some picture of what i have achieved in 2024. First, it is a photo of me finished creating my thesis project with my friends 
+<BlogLinkText text="Fiqri Ananda" href="https://www.linkedin.com/in/m-fiqri-ananda-994965147/"/> and <BlogLinkText text="Jeremy Diaz" href="https://www.linkedin.com/in/jeremydiazp/"/> named <BlogLinkText text="Kalma" href="https://github.com/Kalma-Project/Kalma-Mobile"/> 
+which is a mobile app for mental health and created using Flutter. It was a great experience as a first timer of using Flutter, i learned so much about multi platform, 
+about mobile app architechture, and of course about the Flutter itself. Also the picture in the right side, is when I did one of my a blackbox testing to 
+some people that I categorized as a potential end user. I got a bunch of great responses from them, most of them like the feature and wait for its next development.
+
+<div className="grid grid-cols-2 items-start gap-4 !my-10">
+  <div className="!mb-0 flex flex-col space-y-4">
+    <img
+      src="https://res.cloudinary.com/rafirfansyah/image/upload/v1736756289/IMG-20240129-WA0050_fucjrf.jpg"
+      alt="Picture myself in college"
+      className="w-[600px] max-w-full h-auto rounded-lg"
+    />
+  </div>
+  <div className="!mb-0 flex flex-col space-y-4 h-full">
+    <img
+      src="https://res.cloudinary.com/rafirfansyah/image/upload/c_crop,ar_16:9/v1736756570/WhatsApp_Image_2025-01-13_at_3.21.56_PM_qmix4o.jpg"
+      alt="Picture myself in college"
+      className="w-[600px] max-w-full h-full rounded-lg"
+    />
+  </div>
+</div>
+
+Above is a pictures of me able to join 2 internships program this year as a Front End Engineer. The first one in the left side, it was my first internship experience with
+NTT Data Indonesia. Actually my internship in NTT started in 2023, and ended in 2024. But i think it still counted as one of my internship experience in 2024 lol. The second
+picture on the right side is my second internship with Chup Online Sdn Bhd that started in November 2024. In this internship program, I worked remotely, 
+which made it easier for me to divide my time to learn other things. So far i feel so blessed i can still pursue my dream to be a software engineer, step by step.
+
+## Conclusion
+
+2024 has been such a year of growth and self-discovery for me. From graduating with my Computer Science degree to completing two internships, I’ve realized success isn’t about competing with others—it’s about being better than I was yesterday.
+This year taught me to celebrate the little wins, enjoy time with friends and family, and see setbacks as part of the process. Honestly, there were tough moments, especially during my job search, but I learned to zoom out and look at the bigger picture. The skills I’ve picked up, the people I’ve met, and the lessons I’ve learned all made it worth it.
+Whether it was improving my frontend and backend skills or getting used to remote work during my internships, every step helped me grow personally and professionally. Moving forward, I’m keeping these lessons close: enjoy the little things, focus on self-growth, and always take a moment to see the bigger picture. Here’s to carrying these into the years ahead!
