feat: fixing picture resolution

--- a/src/content/blog/the-2024-retrospective.mdx
+++ b/src/content/blog/the-2024-retrospective.mdx
@@ -30,15 +30,15 @@ I can confidently say that my college life was well spent. Things like traveling
   <div className="!mb-0 flex flex-col space-y-4">
     <img
       src="https://res.cloudinary.com/rafirfansyah/image/upload/v1736234491/WhatsApp_Image_2025-01-07_at_2.20.00_PM_lffkgq.jpg"
-      alt="Picture myself"
-      className="w-[1386px] min-h-[180px] h-60 md:h-[448px] lg:h-[648px] rounded-lg"
+      alt="Picture of myself"
+      className="w-full h-60 md:h-[448px] lg:h-[648px] rounded-lg object-cover"
     />
   </div>
   <div className="!mb-0 flex flex-col space-y-4">
     <img
       src="https://res.cloudinary.com/rafirfansyah/image/upload/v1736234494/20240929_165248_tqeqez.jpg"
-      alt="Picture myself in college"
-      className="w-[1386px] min-h-[180px] h-60 md:h-[448px] lg:h-[648px] rounded-lg"
+      alt="Picture of myself in college"
+      className="w-full h-60 md:h-[448px] lg:h-[648px] rounded-lg object-cover"
     />
   </div>
 </div>
