feat: sync prettier with eslint

--- a/src/content/blog/the-2024-retrospective.mdx
+++ b/src/content/blog/the-2024-retrospective.mdx
@@ -3,7 +3,7 @@ title: The 2024 Retrospective
 description: About a blast I had in 2024!
 pubDate: 2024-01-06
 heroImage: https://res.cloudinary.com/rafirfansyah/image/upload/c_fill,w_430,h_267/v1736097775/659dd9fc3dab4123729a87d2_eyestetix-studio-S7ZWCON3xbQ-unsplash_vijpf2.jpg
-tags: ['retrospective']
+tags: ["retrospective"]
 duration: 7 Minutes
 likes: 0
 ---
@@ -43,9 +43,9 @@ I can confidently say that my college life was well spent. Things like traveling
   </div>
 </div>
 
-I'm a competitive person, and there's no doubt about it. Whether it's striving for academic achievements or playing small games like hide and seek, winning always satisfies 
-me. However, this year has been particularly challenging for me, and it left me feeling stunned for a while. 
-I've realized that my competitiveness isn’t going to take me anywhere further in life; instead, it feels more like envy of other people's achievements. 
+I'm a competitive person, and there's no doubt about it. Whether it's striving for academic achievements or playing small games like hide and seek, winning always satisfies
+me. However, this year has been particularly challenging for me, and it left me feeling stunned for a while.
+I've realized that my competitiveness isn’t going to take me anywhere further in life; instead, it feels more like envy of other people's achievements.
 By the end of 2024, I realized that, being competitive isn't about be better than others. It's about be better than yesterday, just focusing on myself and not take everything
 that i already have for granted. Enjoy every small things. Every pain in our progress, every laughter we had with relatives, every joy for our achievements, and every moments that we share we others,
 that makes us who we are today. So here some pictures of my well-spent moment in 2024.
@@ -95,12 +95,10 @@ that makes us who we are today. So here some pictures of my well-spent moment in
   </div>
 </div>
 
-
-
 #### The Big Theatrics
 
 Back in the day, i used to watch Yung Filly and Chunkz, british youtuber, and once they said a word that stick with me for good. Yes, "The Big Theatrics", this word can
-mean so much. But for me, it's word that can keep me feel grateful and always look for a bigger picture in life. In 2024, I have feel like a failure so many times. It is 
+mean so much. But for me, it's word that can keep me feel grateful and always look for a bigger picture in life. In 2024, I have feel like a failure so many times. It is
 because I always look up at my friend's achievements, and they had bigger achievements and bigger things to be proud of. I keep telling myself that im a failure. After I graduate,
 I couldnt land my first full time job by the end of 2024, and i feel like a failure again. But this word reminds me, that some day in life, we have to stop to look for our small failure,
 but look for the bigger picture of what we have achieved and how much we grow to be better from yesterday.
@@ -112,7 +110,7 @@ but look for the bigger picture of what we have achieved and how much we grow to
       alt="Picture myself in college"
       className="w-[600px] max-w-full h-auto rounded-lg"
     />
-    <img 
+    <img
       src="https://res.cloudinary.com/rafirfansyah/image/upload/v1736755277/73b81e6b-cc91-44f9-9d77-bbb59cc38c3d.png"
       alt="Kalma Picture"
       className="w-[600px] max-w-full h-auto rounded-lg"
@@ -127,11 +125,25 @@ but look for the bigger picture of what we have achieved and how much we grow to
   </div>
 </div>
 
-Here is some picture of what i have achieved in 2024. First, it is a photo of me finished creating my thesis project with my friends 
-<BlogLinkText text="Fiqri Ananda" href="https://www.linkedin.com/in/m-fiqri-ananda-994965147/"/> and <BlogLinkText text="Jeremy Diaz" href="https://www.linkedin.com/in/jeremydiazp/"/> named <BlogLinkText text="Kalma" href="https://github.com/Kalma-Project/Kalma-Mobile"/> 
-which is a mobile app for mental health and created using Flutter. It was a great experience as a first timer of using Flutter, i learned so much about multi platform, 
-about mobile app architechture, and of course about the Flutter itself. Also the picture in the right side, is when I did one of my a blackbox testing to 
-some people that I categorized as a potential end user. I got a bunch of great responses from them, most of them like the feature and wait for its next development.
+Here is some picture of what i have achieved in 2024. First, it is a photo of me finished creating my thesis project with my friends
+
+<BlogLinkText
+  text="Fiqri Ananda"
+  href="https://www.linkedin.com/in/m-fiqri-ananda-994965147/"
+/> and <BlogLinkText
+  text="Jeremy Diaz"
+  href="https://www.linkedin.com/in/jeremydiazp/"
+/> named <BlogLinkText
+  text="Kalma"
+  href="https://github.com/Kalma-Project/Kalma-Mobile"
+/>
+which is a mobile app for mental health and created using Flutter. It was a
+great experience as a first timer of using Flutter, i learned so much about
+multi platform, about mobile app architechture, and of course about the Flutter
+itself. Also the picture in the right side, is when I did one of my a blackbox
+testing to some people that I categorized as a potential end user. I got a bunch
+of great responses from them, most of them like the feature and wait for its
+next development.
 
 <div className="grid grid-cols-2 items-start gap-4 !my-10">
   <div className="!mb-0 flex flex-col space-y-4">
@@ -152,7 +164,7 @@ some people that I categorized as a potential end user. I got a bunch of great r
 
 Above is a pictures of me able to join 2 internships program this year as a Front End Engineer. The first one in the left side, it was my first internship experience with
 NTT Data Indonesia. Actually my internship in NTT started in 2023, and ended in 2024. But i think it still counted as one of my internship experience in 2024 lol. The second
-picture on the right side is my second internship with Chup Online Sdn Bhd that started in November 2024. In this internship program, I worked remotely, 
+picture on the right side is my second internship with Chup Online Sdn Bhd that started in November 2024. In this internship program, I worked remotely,
 which made it easier for me to divide my time to learn other things. So far i feel so blessed i can still pursue my dream to be a software engineer, step by step.
 
 ## Conclusion
