--- a/src/content/blog/the-power-of-reusable-component.mdx
+++ b/src/content/blog/the-power-of-reusable-component.mdx
@@ -2,7 +2,7 @@
 title: The Power of Reusable Component
 description: Dive into a huge benefits of reusable component
 pubDate: 2024-12-21
-tags: ['reactjs', 'frontend']
+tags: ["reactjs", "frontend"]
 duration: 10 Minutes
 likes: 0
 ---
