--- a/src/content/blog/understanding-data-fetching.mdx
+++ b/src/content/blog/understanding-data-fetching.mdx
@@ -2,7 +2,7 @@
 title: Fetch Your Data Like a Pro!
 description: Simple explanation about data fetching methods
 pubDate: 2024-12-01
-tags: ['data-fetch', 'nextjs', 'frontend']
+tags: ["data-fetch", "nextjs", "frontend"]
 duration: 10 Minutes
 likes: 0
 ---
