feat: adding disclaimer for enhance navigation spa blog

--- a/src/content/blog/enhance-navigation-spa.mdx
+++ b/src/content/blog/enhance-navigation-spa.mdx
@@ -23,6 +23,13 @@ we dont want user to go to another page while user is still working on a test. I
 use `window.location` or maybe `beforeunload` from javascript API to handle it. But what if it is a SPA?, Here where React Router's useBlocker
 comes handy. In a simple way, <span className="font-semibold text-gray-300">useBlocker is a hooks that allows you to prevent the user from navigating away from the current location, 
 and present them with a custom UI to allow them to confirm the navigation.</span> I will show you how to use it as flexible as possible so you can use it for many different condition.
+For more detailed information about the hooks properties and others, check it here <BlogLinkText text="useBlocker React Router v6" href="https://reactrouter.com/6.29.0/hooks/use-blocker" />
+
+<br />
+
+<span className="font-semibold my-4 text-gray-300">
+  ⚠️ So far, it is only support for the v6 version
+</span>
 
 <br />
 
