feat: adding content project

--- a/src/content/project/kalma.mdx
+++ b/src/content/project/kalma.mdx
@@ -9,41 +9,58 @@ heroImage: https://res.cloudinary.com/rafirfansyah/image/upload/v1736096625/kalm
 ---
 
 ## Overview
-Kalma is a mental health application which focuses on the user's self healing so users will not do a self diagnose that will lead to something bad. The primary goal of this app is to make users do the self healing method for their daily concern of their mental health state. This app provides 3 main features.
+Kalma is a mental health application which focuses on the user's self healing so users will not do a self diagnose that will lead to 
+something bad. The primary goal of this app is to make users do the self healing method for their daily concern of their mental health 
+state. This app provides 3 main features.
 
-1. **Self Management**
-   * Journaling
-   * Music Meditation
-   * Breathing Meditation
+<div className="mt-4">
+   <p className="text-base font-semibold text-gray-300">Self Management</p>
+   <ul className="list-disc pl-4">
+      <li>Journaling</li>
+      <li>Music Meditation</li>
+      <li>Breathing Meditation</li>
+   </ul>
+</div>
 
-2. **Self Screening**
-   * Users answer 40 questions from the **DASS-Y method** to get a mental health status result.
+<div className="my-4">
+   <p className="text-base font-semibold text-gray-300">Self Screening</p>
+   <ul className="list-disc pl-4">
+      <li>Users answer 40 questions from the <strong>DASS-Y method</strong> to get a mental health status result.</li>
+   </ul>
+</div>
 
-3. **Mental Health Articles**
-   * Provides knowledge about mental health.
-
----
+<div className="mb-4">
+   <p className="text-base font-semibold text-gray-300">Mental Health Articles</p>
+   <ul className="list-disc pl-4">
+      <li>Provides knowledge about mental health.</li>
+   </ul>
+</div>
 
 ## Solution & Approach
-The mobile app was developed with **Flutter**. It is interesting because my team and I had to create a robust mobile architecture, which was challenging since it was our first real-life mobile app project.
+The mobile app was developed with <strong>Flutter</strong>. It is interesting because my team and I had to create a robust mobile 
+architecture, which was challenging since it was our first real-life mobile app project.
 
 To improve app performance and make it dynamic for users, we used several key libraries:
 
-### **Tech Stack**
-- **Dio** → Handles HTTP requests efficiently
-* **flutter_secure_storage** → Stores authentication tokens securely
-* **Provider** → Manages state across widgets
-* **Audioplayer** → Enables seamless audio playback
-* **uni_links** → Handles deep linking for better navigation
-* **Material Design** → Ensures a consistent UI experience
+<div className="my-4">
+   <ul className="list-disc pl-4">
+      <li><strong className="text-gray-300">Dio</strong> → Handles HTTP requests efficiently</li>
+      <li><strong className="text-gray-300">flutter_secure_storage</strong> → Stores authentication tokens securely</li>
+      <li><strong className="text-gray-300">Provider</strong> → Manages state across widgets</li>
+      <li><strong className="text-gray-300">audioplayer</strong> → Enables seamless audio playback</li>
+      <li><strong className="text-gray-300">uni_links</strong> → Handles deep linking for better navigation</li>
+      <li><strong className="text-gray-300">Material Design</strong> → Ensures a consistent UI experience</li>
+   </ul>
+</div>
 
----
+and here is the tech stack that I used to built this project from backend to frontend development.
 
-## Tech Stack
-Here are the tech stacks that my team used to build the mobile app:
-
-* **Flutter**
-* **Dart**
-* **PostgreSQL**
-* **Next.js**
-* **TypeScript**
+<div className="my-4">
+   <ul className="list-disc pl-4">
+      <li><strong className="text-gray-300">Flutter</strong></li>
+      <li><strong className="text-gray-300">Dart</strong></li>
+      <li><strong className="text-gray-300">PostgreSQL</strong></li>
+      <li><strong className="text-gray-300">Next.js</strong></li>
+      <li><strong className="text-gray-300">TypeScript</strong></li>
+   </ul>
+</div>
